# goodwe2influxdb

./: README.md  goodwe2influxdb.py  pyproject.toml
docs/: contributing.md  python-telegraf-plugin.md
src/: azrouter2influxdb.py  goodwe2influxdb.py  telegraf_plugin_main.py
