[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "goodwe2influxdb"
description = "Collect data from a Goodwe inverter and store them in InfluxDB"
version = "0.1.0"
authors = [{ name="Petr P." }]
dependencies = [
    "influxdb-client[ciso]",
    "goodwe",
]
readme = "README.md"
requires-python = ">=3.7"
classifiers= [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX",
]

[project.scripts]
goodwe2influxdb= "goodwe2influxdb:main"
